# PirateEditor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  temp.txt
levels/0/: 0_terrain.csv  level_0_bg_palms.csv  level_0_coins.csv  level_0_constraints.csv  level_0_crates.csv  level_0_enemies.csv  level_0_fg_palms.csv  level_0_grass.csv  level_0_player.csv  level_0_terrain.csv
scenes/0/: 0_bg_palms.csv  0_coins.csv  0_fg_palms.csv
scenes/0_test/: 0_test_bg_palms.csv  0_test_enemies.csv  0_test_player.csv  0_test_terrain.csv
scenes/1/: 1_bg_palms.csv  1_coins.csv  1_constraints.csv  1_crates.csv  1_enemies.csv  1_fg_palms.csv  1_grass.csv  1_terrain.csv
scenes/2_draft/: 2_draft_bg_palms.csv  2_draft_terrain.csv
scenes/Ny_Scene/: Ny_Scene_coins.csv  Ny_Scene_constraints.csv  Ny_Scene_crates.csv  Ny_Scene_fg_palms.csv  Ny_Scene_player.csv  Ny_Scene_terrain.csv
scenes/Test/: Test_terrain.csv
scenes/Test_2/: Test_2_terrain.csv
scenes/test_2/: test_2_crates.csv  test_2_terrain.csv
scenes/test_4/: test_4_terrain.csv
src/: main.cpp
src/core/: Audio.cpp  Audio.hpp  Editor.cpp  Editor.hpp  ResourceManager.cpp  ResourceManager.hpp  SDLHandler.cpp  SDLHandler.hpp  TextRenderer.cpp  TextRenderer.hpp  TileManager.cpp  TileManager.hpp  gamelib.cpp  gamelib.hpp  mathlib.hpp  sdl_setup.cpp  sdl_setup.hpp
src/core/resources/: ResourceManager.cpp  ResourceManager.hpp
src/core/scene/: Background.cpp  Background.hpp  Scene.cpp  Scene.hpp
src/core/tiles/: TileManager.cpp  TileManager.hpp
src/editor/: Editor.cpp  Editor.hpp  EditorUI.cpp  EditorUI.hpp  FPS_Counter.hpp  editor.cpp  editor.hpp  ui.cpp  ui.hpp
src/game/: animation.cpp  animation.hpp
src/io/: utils.cpp  utils.hpp
src/logging/: Logger.cpp  Logger.hpp
src/math/: vec.hpp
src/scene/: Background.cpp  Background.hpp  Scene.cpp  Scene.hpp
src/sdl/: ResourceManager.cpp  ResourceManager.hpp  SDL_Handler.cpp  SDL_Handler.hpp
src/ui/: EditorUI.cpp  EditorUI.hpp  FPS_Counter.cpp  FPS_Counter.hpp  TextHandler.cpp  TextHandler.hpp
